[package]
name = "mplus-tracker"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mplus-tracker"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["json", "query"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "migrate", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Hashing (dedupe)
sha2 = "0.10"
hex = "0.4"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }

# Config / env
dotenvy = "0.15"

# Error handling
anyhow = "1"
thiserror = "1"

# Concurrency primitives
tokio-util = "0.7"
futures = "0.3"

# Rand for jitter
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
